# EpiVM

./: .gitignore  LICENSE  Main.lhs  README  Setup.hs  epic.cabal
Atuin/: LICENSE  Setup.hs  atuin.cabal  test.at
Atuin/sdl/: sdlrun.c  sdlrun.h
Atuin/src/: Lexer.lhs  Main.lhs  Makefile  MkEpic.lhs  Parser.y  SDLprims.lhs  Turtle.lhs
ELOGO/: elogo.cabal
ELOGO/sdl/: Makefile  sdlrun.c  sdlrun.h
ELOGO/src/: LOGO.lhs  Main.lhs  MkEpic.lhs  SDLprims.lhs
Epic/: Bytecode.lhs  CodegenC.lhs  CodegenStack.lhs  Compiler.lhs  Epic.lhs  Evaluator.lhs  Language.lhs  Lexer.lhs  Parser.y  Scopecheck.lhs  Simplify.lhs  Stackcode.lhs
FL/: fl.cabal
FL/src/: Lang.lhs  Main.lhs
Papers/Epic/: Makefile  conclusions.tex  epic.tex  example.tex  intro.tex  language.tex  literature.bib  macros.ltx
Papers/Epic-TFP/: Makefile  bigexample.tex  conclusions.tex  epic.tex  example.tex  implementation.tex  intro.tex  language.tex  literature.bib
evm/: Makefile  closure.c  closure.h  emalloc.c  emalloc.h  gc_header.h  mainprog.c  sparks.c  sparks.h  stdfuns.c  stdfuns.h
examples/: Prelude.e
main/: Main.lhs
tests/: Prelude.e  addermem.e  expected  listy.e
